tests/baselines/reference/destructuringVoidStrictNullChecks.errors.txt
tests/cases/conformance/es6/destructuring/destructuringVoidStrictNullChecks.ts(2,7): error TS2532: Object is possibly 'undefined'.


==== tests/cases/conformance/es6/destructuring/destructuringVoidStrictNullChecks.ts (1 errors) ====
    declare const v: void;
    const {} = v;
          ~~
!!! error TS2532: Object is possibly 'undefined'.
    